--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -39,7 +39,7 @@
                     <a class="nav-item nav-link" href="">Logout</a>
                     {% else %}
                     <a class="nav-item nav-link" href="">Login</a>
-                    <a class="nav-item nav-link" href="">Register</a>
+                    <a class="nav-item nav-link" href="{% url 'auth:registration' %}">Register</a>
                     {% endif %}
                 </div>
             </div>
